# conversa

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
openai_client/: Cargo.toml  README.md  build.rs  openapi.documented.yml
openai_client/src/: client.rs  lib.rs  multipart.rs  types.rs
openai_client/tests/: client.rs  model_types.rs  response_types.rs
